--- a/.travis.yml
+++ b/.travis.yml
@@ -21,8 +21,10 @@ install:
 
 script:
   - perl -c src/*.pl
-  - perlcritic --brutal --verbose 5 t/
-  - perlcritic --brutal --verbose 5 src/
+  - perlcritic --verbose 5 t/
+  - perlcritic --verbose 5 src/
+# - perlcritic --brutal --verbose 5 t/
+# - perlcritic --brutal --verbose 5 src/
   - prove
 
 #branches:
