--- a/.travis.yml
+++ b/.travis.yml
@@ -26,8 +26,7 @@ script:
   - perlcritic --stern --verbose 5 t/
   - perlcritic --stern --verbose 5 src/
   - prove
-  - perl -MDevel::Cover src/*.pm
-  - cover
+  - cover -t -make 'prove -Ilib -r t; echo >/dev/null'
 
 #branches:
 #   only:
